# Operating-systems

Lab1/: README.md
Lab1/.devcontainer/: devcontainer.bash
Lab1/benchmark/: CMakeLists.txt
Lab1/benchmark/monolith/: bin-search.cpp  ema-sort.cpp  generator.cpp  read-binary.cpp
Lab1/source/monolith/app/: Main.cpp
